# archive-splitter-processor

./: .gitignore  README.md
.github/workflows/: build-macos-arm.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
ui/: index.html  main.js  style.css
